apps/nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  tls:
  - hosts:
    - "nginx.malininc.com"
    secretName: nginx-tls
  rules:
  - host: "nginx.malininc.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
